--- a/app/views/admin/menu_blocks/_menu_item_fields.html.slim
+++ b/app/views/admin/menu_blocks/_menu_item_fields.html.slim
@@ -1,4 +1,4 @@
-.nested-fields data-new_record="#{f.object.new_record?}" data-controller="drag"
+.nested-fields data-new_record="#{f.object.new_record?}"
   div.draggable-item.bg-light.p-2.mb-2
     = f.hidden_field :id
     = f.hidden_field :_destroy
