Fix various path and add enabled

--- a/app/views/adherents/index.html.slim
+++ b/app/views/adherents/index.html.slim
@@ -5,4 +5,4 @@
   - @adherent_categories.each do |category|
     h2.text-4xl.font-bold.text-gray-900.mb-6.text-center = category.title
     .flex.flex-nowrap.justify-center
-      = render partial: 'adherents/card', collection: category.adherents, as: :adherent
+      = render partial: 'adherents/card', collection: category.adherents.enabled, as: :adherent
