--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -116,7 +116,7 @@ html lang='fr'
               li = link_to "Actualités", posts_path
               li Actions
               li = link_to "Formations", formations_path
-              li = link_to @key_number_page.title, main_page_path(@key_number_page)
+              li = link_to "Chiffres clés", key_numbers_path
               li = link_to "Ressources", resources_path
         .w-1/3.py-8
           - if Setting.logo.present?
