--- a/app/views/partners/index.html.slim
+++ b/app/views/partners/index.html.slim
@@ -5,4 +5,4 @@
   - @partner_categories.each do |category|
     h2.text-4xl.font-bold.text-gray-900.mb-6.text-center = category.title
     .flex.flex-nowrap.justify-center
-      = render partial: 'partners/card', collection: category.partners, as: :partner
+      = render partial: 'partners/card', collection: category.partners.enabled, as: :partner
