--- a/app/views/admin/posts/index.html.slim
+++ b/app/views/admin/posts/index.html.slim
@@ -18,13 +18,9 @@
               id: "dropdown_action",  \
               data: {action: 'change->manage-index#submitFilterForm'}
           .col-lg-4.col-md-6.col-12
-            = label_tag "Par thème"
-            = select_tag :by_theme, \
-              options_for_select(theme_options, params[:by_theme]), \
-              prompt: "Tous les thèmes",\
-              class: "form-control dropdown-action", \
-              id: "dropdown_action",  \
-              data: {action: 'change->manage-index#submitFilterForm'}
+            = render 'admin/themes/form_items/by_theme_select'
+          .col-lg-4.col-md-6.col-12
+            = render 'admin/profiles/form_items/by_profile_select'
 
     .cadre-table
       table.table.table-striped.table-hover.table-sm
@@ -32,9 +28,11 @@
           tr
             th Date publication
             th Titre
-            th Thèmes
-            th Catégorie
-            th Statut
+            th.text-center Thèmes
+            th.text-center Profils
+            th.text-center Catégorie
+            th.text-center Ressources
+            th.text-center Statut
 
             th
         tbody
@@ -46,16 +44,20 @@
               / td= link_to admin_intervention_levels_path(by_post: post.id), class: "btn btn-light btn-sm" do
               /   span.ion-ios-list-outline>
               /   = post.intervention_levels.count
-              td
+              td.text-center
                 - post.themes.each do |theme|
                   .badge.badge-secondary.mr-2
                     = theme.title
-              td = post.post_category&.title
+              td.text-center
+                - post.profiles.each do |profile|
+                  .badge.badge-secondary.mr-2
+                    = profile.title
+              td.text-center = post.post_category&.title
               td.text-center
                 = link_to edit_admin_post_path(post, anchor: 'resources'), class: "btn btn-light btn-sm" do
                   = post.resources.count
 
-              td = post.publication_state_humanized
+              td.text-center = post.publication_state_humanized
               td=> link_to edit_admin_post_path(post), class: "btn btn-sm btn-info mr-2", title: "Editer" do
                 i.fas.fa-pen
                 = link_to admin_post_path(post), method: :delete, data: {confirm: "Confirmer la suppression ?"}, title: "Supprimer", class: "btn btn-sm btn-danger" do
