Add few improvments

--- a/app/views/admin/key_numbers/index.html.slim
+++ b/app/views/admin/key_numbers/index.html.slim
@@ -2,6 +2,11 @@
 h1.mb-5 Chiffres clés
 
 div data-controller='manage-index'
+  .row
+    .col-md-4
+      .bg-light.p-3.mb-3
+        = render 'admin/main_pages/form_elements/parent_page_select_form', page: @page
+
 
   small = I18n.t(:results, count: @key_numbers.count)
 
