--- a/app/views/admin/main_pages/child_pages/edit.html.slim
+++ b/app/views/admin/main_pages/child_pages/edit.html.slim
@@ -1,6 +1,6 @@
 = render layout: 'admin/main_pages/layout_form' do
   = render layout: 'admin/main_pages/child_pages/layout_form' do
 
-    = form_for(@child_page, as: :child_page, \
+    = form_for(@child_page, as: :page, \
       url: admin_main_page_child_page_path(@main_page, @child_page), html: {class: "form-horizontal"}) do |f|
       =  render partial: "form", locals: {f: f}
