--- a/app/views/admin/main_pages/edit.html.slim
+++ b/app/views/admin/main_pages/edit.html.slim
@@ -1,5 +1,5 @@
 = render layout: 'admin/main_pages/layout_form' do
 
-  = form_for(@main_page, as: :main_page, \
+  = form_for(@main_page, as: :page, \
     url: admin_main_page_path(@main_page), html: {class: "form-horizontal"}) do |f| 
     =  render partial: "form", locals: {f: f}
