--- a/app/views/admin/main_pages/new.html.slim
+++ b/app/views/admin/main_pages/new.html.slim
@@ -8,7 +8,7 @@
 
 hr
 
-= form_for(@main_page, as: :main_page, \
+= form_for(@main_page, as: :page, \
   url: admin_main_pages_path, html: {class: "form-horizontal"}) do |f| 
 
   =  render partial: "form", locals: {f: f}
