--- a/app/views/admin/themes/form_items/_theme_checkboxes.html.slim
+++ b/app/views/admin/themes/form_items/_theme_checkboxes.html.slim
@@ -2,7 +2,7 @@
   label.font-weight-bold Thèmes
   .form-group
     // simple way to remove all themes
-    = hidden_field_tag "post[theme_ids][]", nil
+    = hidden_field_tag "#{f.object.class.name.underscore}[theme_ids][]", nil
     - Theme.all.each do |theme|
       .form-check.form-check-inline
         => f.check_box :theme_ids, {multiple: true, 
