--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -113,7 +113,8 @@ html lang='fr'
             .text-xl.uppercase Liens rapides
             ul 
               li = link_to "Actualités", posts_path
-              li Actions
+              li = link_to "Actions", activities_path
+              li = link_to "Evénements", events_path
               li = link_to "Formations", formations_path
               li = link_to "Chiffres clés", key_numbers_path
               li = link_to "Ressources", resources_path
