--- a/app/views/posts/_card.html.slim
+++ b/app/views/posts/_card.html.slim
@@ -12,3 +12,5 @@
       span.inline-block.bg-gray-200.rounded-full.px-3.py-1.text-sm.font-semibold.text-gray-700.mr-2.mb-2 = post.post_category.title
     - post.themes.enabled.each do |theme|
       span.inline-block.bg-gray-200.rounded-full.px-3.py-1.text-sm.font-semibold.text-gray-700.mr-2.mb-2 = theme.title
+    - post.profiles.enabled.each do |profile|
+      span.inline-block.bg-gray-200.rounded-full.px-3.py-1.text-sm.font-semibold.text-gray-700.mr-2.mb-2 = profile.title
