--- a/app/front/styles/application.scss
+++ b/app/front/styles/application.scss
@@ -1,20 +1,6 @@
-$fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
-
-:root {
-  --color-primary: #5c6ac4;
-  --color-secondary: #ecc94b;
-}
-
-@import "~@fortawesome/fontawesome-free/scss/fontawesome";
-@import "~@fortawesome/fontawesome-free/scss/brands";
-@import "~@fortawesome/fontawesome-free/scss/regular";
-@import "~@fortawesome/fontawesome-free/scss/solid";
-
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
 @import "application/layout.sass";
 @import "application/form.sass";
 @import "application/flash-message.sass";
 @import "application/breadcrumb.sass";
 @import "application/post-card.sass";
+@import "application/home.sass";
