--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,35 +16,39 @@ html lang='fr'
 
   body.h-full
     .relative data-controller="main-menu"
-      / nav.side-menu.absolute.top-0.left-0.bg-gray-700.w-48.h-full.text-white data-target="main-menu.sideMenu"
-      /   .p-6
-      /     svg.stroke-current.cursor-pointer viewBox="0 0 100 80" width="40" height="40" xmlns="http://www.w3.org/2000/svg" data-action="click->main-menu#toggleSideMenu"
-      /       line x1="4" y1="80" x2="80" y2="4" rx="8" stroke-width="15"
-      /       line x1="4" y1="4" x2="80" y2="80"  rx="8" stroke-width="15"
-
-      nav.flex.items-center.justify-between.bg-primary.text-white.px-6.py-4
-        button.flex.items-center.flex-1
-          svg.fill-current.cursor-pointer viewBox="0 0 100 80" width="40" height="40" xmlns="http://www.w3.org/2000/svg" data-action="click->main-menu#toggleSideMenu"
-            title Menu
-            rect width="100" height="15" rx="8"
-            rect y="30" width="100" height="15" rx="8"
-            rect y="60" width="100" height="15" rx="8"
-
-        = link_to root_path, title: "Page d'accueil", class: "block flex items-center w-auto" do
-          - if Setting.logo.present?
-            => image_tag Setting.logo.variant(resize_to_limit: [nil, 50]), class: "mr-3"
-          span.font-semibold.text-xl.tracking-tight = Setting.project_name
-        .flex.items-center.text-white.flex-1.justify-end
+      nav.flex.justify-between
+        div.bg-primary.text-white.flex.w-2/12.px-6.py-4.items-center
+          button.flex.items-center.flex-1.block.md:hidden
+            svg.fill-current.cursor-pointer viewBox="0 0 100 80" width="40" height="40" xmlns="http://www.w3.org/2000/svg" data-action="click->main-menu#toggleSideMenu"
+              title Menu
+              rect width="100" height="15" rx="8"
+              rect y="30" width="100" height="15" rx="8"
+              rect y="60" width="100" height="15" rx="8"
+          = link_to root_path, title: "Page d'accueil", class: "block flex items-center w-auto" do
+            - if Setting.logo.present?
+              => image_tag Setting.logo.variant(resize_to_limit: [nil, 50]), class: "mr-3"
+            span.font-semibold.text-xl.tracking-tight = Setting.project_name
+        .flex.items-center.flex-1.justify-end.px-6.py-4.bg-gray-200
           .flex.text-sm.items-center.justify-end
-            = link_to "Formations", formations_path, class: "block mr-2"
-            = link_to "Contact", basic_page_path(BasicPage.find_by(key: 'contact')), class: "inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white ml-2 hover:border-transparent hover:text-teal-500 hover:bg-white"
-      nav.relative.bg-gray-800.px-3
+            = link_to main_page_path(@membership_page), class: "flex flex-col items-center px-2 uppercase text-primary" do
+              = image_pack_tag "picto/picto-adhesion.svg", class: "w-10 mb-2"
+              ' Adhésion
+            = link_to formations_path, class: "flex flex-col items-center px-2 uppercase text-primary" do
+              = image_pack_tag "picto/picto-adhesion.svg", class: "w-10 mb-2"
+              ' Formations
+            = link_to formations_path, class: "flex flex-col items-center px-2 uppercase text-primary" do
+              = image_pack_tag "picto/picto-adhesion.svg", class: "w-10 mb-2"
+              ' Cartographie
+            = link_to basic_page_path(@contact_page), class: "flex flex-col items-center pl-2 uppercase text-primary" do
+              = image_pack_tag "picto/picto-adhesion.svg", class: "w-10 mb-2"
+              ' Contact
+      nav.relative.bg-white.px-6
         div.flex.justify-between.items-center
           div.flex.justify-start.lg:w-0.lg:flex-1
           div.lg:inline-flex.lg:flex-row.lg:m-auto.lg:w-auto.w-full.lg:items-center.items-start.flex.flex-col.lg:h-auto
             - @themes.each do |theme|
               div.block-menu-toggler data-action="mouseenter->main-menu#openBlockMenu mouseleave->main-menu#closeBlockMenu"
-                = active_link_to theme.title, theme_path(theme), active: :inclusive, class: "relative lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-200 items-center justify-center hover:text-white hover:underline"
+                = active_link_to theme.title, theme_path(theme), active: :inclusive, class: "relative lg:inline-flex lg:w-auto w-full px-3 py-2 rounded items-center justify-center text-primary hover:font-bold"
                 nav.block-menu.absolute.left-0.w-full.bg-gray-800.text-white.border-t.border-white data-target="main-menu.blockMenu"
                   .p-6
                     .flex.justify-between.items-center
@@ -69,7 +73,7 @@ html lang='fr'
                               li = link_to menu_item.title, menu_item.url
             - @main_pages.each do |main_page|
               div.block-menu-toggler data-action="mouseenter->main-menu#openBlockMenu mouseleave->main-menu#closeBlockMenu"
-                = active_link_to main_page.title, main_page_path(main_page), active: :inclusive, class: "lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-200 items-center justify-center hover:text-white hover:underline"
+                = active_link_to main_page.title, main_page_path(main_page), active: :inclusive, class: "lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-primary items-center justify-center hover:font-bold"
                 nav.block-menu.absolute.left-0.w-full.bg-gray-800.text-white.border-t.border-white data-target="main-menu.blockMenu"
                   .p-6
                     .flex.justify-between.items-center
@@ -96,28 +100,55 @@ html lang='fr'
 
       = yield
 
-    .w-full.bg-gray-500
-      .max-w-6xl.mx-auto
-        .w-2/3.flex
-          .w-1/3.py-8.text-gray-50
-            .text-xl.uppercase Thèmes
-            ul
-              - @themes.each do |theme|
-                li = link_to theme.title, theme_path(theme)
-          .w-1/3.py-8.text-gray-50
-            .text-xl.uppercase Profils
-            ul 
-              - @profiles.each do |profile|
-                li = link_to profile.title, profile_path(profile)
-          .w-1/3.py-8.text-gray-50
-            .text-xl.uppercase Liens rapides
-            ul 
-              li = link_to "Actualités", posts_path
-              li = link_to "Actions", activities_path
-              li = link_to "Evénements", events_path
-              li = link_to "Formations", formations_path
-              li = link_to "Chiffres clés", key_numbers_path
-              li = link_to "Ressources", resources_path
-        .w-1/3.py-8
-          - if Setting.logo.present?
-            => image_tag Setting.logo.variant(resize_to_limit: [nil, 150]), class: ""
+    .footer
+      .footer-line.w-full.bg-primary
+      .newsletter-subscription.bg-gray-200
+        .max-w-6xl.mx-auto.flex.py-10
+          .w-3/5.text-right
+            p.uppercase = Setting.newsletter_subscription_title
+            p.text-sm = Setting.newsletter_subscription_description
+          .w-2/5.flex
+            = text_field_tag :email, "", class: "flex-1 px-2 block w-full rounded-none border border-gray-300 mx-3"
+            = button_tag "Envoyer", class: 'inline-flex items-center px-3 border border-gray-300 bg-gray-50 text-gray-500 text-sm'
+      .footer-line-xl.w-full.bg-white
+
+      .w-full.bg-gray-200
+        .max-w-6xl.mx-auto.flex
+          .w-2/3.flex
+            .w-1/3.py-8
+              .text-xl.uppercase.text-primary Thèmes
+              ul
+                - @themes.each do |theme|
+                  li = link_to theme.title, theme_path(theme), class: "text-gray-600"
+            .w-1/3.py-8
+              .text-xl.uppercase.text-primary Profils
+              ul 
+                - @profiles.each do |profile|
+                  li = link_to profile.title, profile_path(profile), class: "text-gray-600"
+            .w-1/3.py-8
+              .text-xl.uppercase.text-primary Liens rapides
+              ul.text-gray-600
+                li = link_to "Actualités", posts_path
+                li = link_to "Actions", activities_path
+                li = link_to "Evénements", events_path
+                li = link_to "Formations", formations_path
+                li = link_to "Chiffres clés", key_numbers_path
+                li = link_to "Ressources", resources_path
+          .w-1/3.py-8
+            - if Setting.logo.present?
+              => image_tag Setting.logo.variant(resize_to_limit: [nil, 150]), class: ""
+
+      .bg-primary.py-8
+        .container.mx-auto.flex.justify-between
+          .links.flex.justify-between.text-gray-800
+            .credit.px-3
+              => Date.current.year
+              => link_to "l'assembleuse", "https://www.lassembleuse.fr/"
+              ' & 
+              = link_to "Ellllsa", "https://ellllsa.com/"
+
+            = link_to "Plan du site", "#", class: "px-3"
+            = link_to "Mentions légales", "#", class: "px-3"
+          .social
+
+
