Add mobile polish to home page

--- a/app/front/styles/application/layout.sass
+++ b/app/front/styles/application/layout.sass
@@ -8,11 +8,11 @@ html, body
   margin: 0
 
 // MENU
-.side-menu
-  transform: translateX(-100%)
+.mobile-menu
+  transform: translateY(-100%)
   transition: transform .5s ease
-.side-menu_opened
-  transform: translateX(0)
+.mobile-menu_opened
+  transform: translateY(0)
 
 .block-menu-toggler
   > a
