--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,58 +1,58 @@
 .home-bg.flex
-  .w-2/5
-  .home-baseline.w-2/5.p-12.flex.items-center
-    .text-4xl.uppercase = Setting.baseline
-
-.mx-auto.bg-primary.text-white
-  .flex
-    .w-2/12.p-3.text-center.font-bold
-      h3.text-sm.uppercase Prochains événements
-    .w-8/12.p-3.text-center.font-bold
-      h3.text-sm.uppercase Quelques actions
-    .w-2/12.p-3.text-center.font-bold
-      h3.text-sm.uppercase Je suis...
+  .w-1/3.md:w-2/5
+  .home-baseline.w-2/3.md:w-2/5.p-12.flex.items-center
+    .text-xl.md:text-4xl.uppercase = Setting.baseline
 
 .mx-auto.mb-24
-  .flex
-    .w-2/12.p-3
-      - @agenda_items.each do |agenda_item|
-        - item = AgendaItemDecorator.new(agenda_item)
-        .flex.items-center.border.border-solid.border-gray-800.mb-2
-          .flex.flex-col.w-16.h-16.bg-gray-800.p-2.font-bold.text-white.uppercase.leading-4.text-center
-            .text-lg= item.day
-            .text-base= item.month
-            .text-xs= item.year
-          .p-2
-            = link_to item.title, item.url, target: "_blank"
-      = link_to "Voir tous les événements", events_path, class: "underline"
+  .flex.flex-col.md:flex-row
+    .w-full.md:w-1/5
+      .p-3.text-center.font-bold.bg-primary.text-white
+        h3.text-sm.uppercase Prochains événements
+      .p-3
+        - @agenda_items.each do |agenda_item|
+          - item = AgendaItemDecorator.new(agenda_item)
+          .flex.items-center.border.border-solid.border-gray-800.mb-2
+            .flex.flex-col.w-16.h-16.bg-gray-800.p-2.font-bold.text-white.uppercase.leading-4.text-center
+              .text-lg= item.day
+              .text-base= item.month
+              .text-xs= item.year
+            .p-2
+              = link_to item.title, item.url, target: "_blank"
+        = link_to "Voir tous les événements", events_path, class: "underline"
+    .w-full.md:w-3/5
+      .p-3.text-center.font-bold.bg-primary.text-white
+        h3.text-sm.uppercase Quelques actions
+      .p-3
+        .w-full.flex.flex-wrap.flex-col.md:flex-row
+          - @highlighted_activities.each do |activity|
+            .w-full.md:w-1/2.md:pr-4.mb-4
+              .bg-gray-500.w-full.h-48.p-5.flex.flex-col.content-center.justify-center
+                .text-lg Je veux
+                .text-2xl = link_to activity.home_title, activity_path(activity)
+    .w-full.md:w-1/5
+      .p-3.text-center.font-bold.bg-primary.text-white
+        h3.text-sm.uppercase Je suis...
+      .p-3
+        - @profiles.each do |profile|
+          .flex.items-center.border.border-solid.border-gray-500.mb-2
+            .flex.flex-col.w-16.h-16.bg-gray-500.p-2.font-bold.text-white.uppercase.leading-4.text-center
+              p icone
+            .p-2
+              = link_to profile.title, profile_path(profile)
 
-    .w-8/12.p-3
-      .w-full.flex.flex-wrap
-        - @highlighted_activities.each do |activity|
-          .w-1/2.pr-4.mb-4
-            .bg-gray-500.w-full.h-48.p-5.flex.flex-col.content-center.justify-center
-              .text-lg Je veux
-              .text-2xl = link_to activity.home_title, activity_path(activity)
 
-    .w-2/12.p-3
-      - @profiles.each do |profile|
-        .flex.items-center.border.border-solid.border-gray-500.mb-2
-          .flex.flex-col.w-16.h-16.bg-gray-500.p-2.font-bold.text-white.uppercase.leading-4.text-center
-            p icone
-          .p-2
-            = link_to profile.title, profile_path(profile)
 
 .container.mx-auto.mb-24
-  .w-1/2.text-center
+  .w-full.md:w-1/2.text-center
     .md:w-3/4.mx-auto
       p.text-xl.mb-6 Vous souhaitez gagner en compétence ou professionnaliser votre équipe ?
       = link_to "S'inscrire aux formations", formations_path, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
 
 .container.mx-auto.mb-24
   h2.text-3xl.uppercase.mb-3 Dernières actualités
-  .flex
+  .flex.flex-col.md:flex-row
     - @posts.each do |post|
-      .w-1/2
+      .w-full.md:w-1/2.px-4
         = render 'posts/card', post: post
 
   = link_to "Voir toutes les actualités", posts_path, class: "mt-4 underscore"
