--- a/app/views/layouts/_block_menu.html.slim
+++ b/app/views/layouts/_block_menu.html.slim
@@ -1,5 +1,5 @@
 div.block-menu-toggler data-action="mouseenter->main-menu#openBlockMenu mouseleave->main-menu#closeBlockMenu"
-  = active_link_to item.title, item_path, title: item.title, active: :inclusive, class: "relative lg:inline-flex lg:w-auto w-full px-3 py-2 rounded items-center justify-center text-primary hover:font-bold uppercase"
+  = active_link_to item.title, item_path, title: item.title, active: :inclusive, class: "relative md:inline-flex md:w-auto w-full px-3 py-2 items-center justify-center text-primary uppercase"
   nav.block-menu.absolute.left-0.w-full.bg-gray-300.text-gray-800.border-t.border-white data-target="main-menu.blockMenu"
     .container.mx-auto.flex.py-12
       .w-1/2.px-4
